fixed question tag, fixed header, and swapped home screen photo on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 html,
 body {
   height: 100%;
@@ -42,6 +43,7 @@ footer {
   width: 100%;
   padding: 40px 35px;
 }
+
 footer h2 {
   display: inline;
   color: white;
@@ -57,6 +59,11 @@ footer h2 {
 
 .home-photo {
   align-self: center;
+}
+
+.home-photo-mobile {
+  display: none;
+  margin-top: 15px;
 }
 
 .start-game {
@@ -157,4 +164,60 @@ select option {
 .full-height {
   height: 100vh;
   margin: 0;
+}
+
+/* Media query for mobile */
+@media only screen and (max-width: 550px) {
+  body {
+    font-size: 1rem;
+  }
+  
+  #logo {
+    font-size: 2rem;
+    display: block;
+  }
+
+  .header-btn {
+    display: block;
+    margin: 6px auto 10px auto;
+    font-size: 1rem;
+  }
+
+  .hero-body {
+    display: block;
+    padding: 0;
+  }
+
+  .home-photo {
+    display: none;
+  }
+
+  .home-photo-mobile {
+    display: block;
+  }
+
+  .message-body {
+    padding: 15px 20px;
+  }
+
+  .question {
+    font-size: 1rem;
+  }
+
+  .question-container .tag {
+    height: auto !important;
+    white-space: unset !important;
+    /* these should let the tag text wrap */
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+
+  .choice {
+    display: block;
+    margin-top: 20px;
+  }
+
+  .answer-choices:first-child {
+    margin-top: 0;
+  }
 }
